--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,3 +1,19 @@
-<div>
-  <h2>{{ user().name }}</h2>
-</div>
+@if(isAddingTask){
+<app-new-task (cancel)="onCancelAddTask()" (add)="onAddTask($event)" />
+}
+
+<section id="tasks">
+  <header>
+    <h2>{{ user().name }}'s tasks</h2>
+    <menu>
+      <button (click)="onStartAddTask()">Add Task</button>
+    </menu>
+  </header>
+  <ul>
+    @for(task of selectedUserTasks; track task.id) {
+    <li>
+      <app-task [task]="task" (complete)="onCompleteTask($event)" />
+    </li>
+    }
+  </ul>
+</section>
