--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,10 +1,10 @@
 @if(isAddingTask){
-<app-new-task (close)="onCloseAddTask()" [userId]="user().id" />
+<app-new-task (close)="onCloseAddTask()" [userId]="user.id" />
 }
 
 <section id="tasks">
   <header>
-    <h2>{{ user().name }}'s tasks</h2>
+    <h2>{{ user.name }}'s tasks</h2>
     <menu>
       <button (click)="onStartAddTask()">Add Task</button>
     </menu>
