--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
 <app-header />
-<app-user-input (calculate)="onUserInput($event)" />
-
-@if(userInput) {
-<app-result [userInput]="userInput" />
-}
+<app-user-input />
+<app-result />
