--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -1,3 +1,6 @@
+@if(!investmentResults()) {
+<p class="center">Please enter some values and press "Calculate".</p>
+} @else {
 <table>
   <thead>
     <tr>
@@ -20,3 +23,4 @@
     }
   </tbody>
 </table>
+}
