--- a/src/app/user-input/user-input.component.html
+++ b/src/app/user-input/user-input.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (submit)="onSubmit()">
+<form [formGroup]="form()" (submit)="onSubmit()">
   <div class="input-group">
     <p>
       <label for="initialInvestment">Initial investment</label>
