--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,9 +1,14 @@
-<form>
+<form (ngSubmit)="onSubmit()" #form>
   <app-control label="Title">
-    <input name="title" id="title" />
+    <input name="title" id="title" [(ngModel)]="ticketTitle" />
   </app-control>
   <app-control label="Request">
-    <textarea name="request" id="request" rows="3"></textarea>
+    <textarea
+      name="request"
+      id="request"
+      rows="3"
+      [(ngModel)]="ticketRequest"
+    ></textarea>
   </app-control>
   <p>
     <button appButton>
