--- a/src/app/dashboard/tickets/tickets.component.html
+++ b/src/app/dashboard/tickets/tickets.component.html
@@ -1,3 +1,14 @@
-<div id="new-ticket">
-  <app-new-ticket />
+<div>
+  <ul>
+    @for(ticket of tickets; track ticket.id) {
+    <li>
+      <app-ticket [ticket]="ticket" (close)="onCloseTicket(ticket.id)" />
+    </li>
+    } @empty {
+    <p>No tickets available</p>
+    }
+  </ul>
+</div>
+<div class="new-ticket">
+  <app-new-ticket (add)="onAddTicket($event)" />
 </div>
