--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,25 @@
 <main>
-  <app-learning-resources />
+  <app-learning-resources appLog />
 
   <hr />
 
   <app-auth />
+
+  <!-- @if(isAdmin()) {
+  <p>Only admins should see this!</p>
+  } -->
+  <!-- <p *ngIf="isAdmin()">Only admins should see this!</p> -->
+  <!-- <ng-template appAuth="admin">
+    <p>Only admins should see this!</p>
+  </ng-template> -->
+
+  <p *appAuth="'admin'" appLog class="protected-content admin">
+    Only admins should see this!
+  </p>
+  <p *appAuth="'user'" class="protected-content authenticated">
+    Regular users should see this!
+  </p>
+  <p *appAuth="'guest'" class="protected-content unauthenticated">
+    Guest should see this!
+  </p>
 </main>
