--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,26 +4,35 @@
       <img src="temp-icon.png" alt="Thermometer icon" />
       <div>
         <h2>Current Temperatures</h2>
-        <p>{{ currentDate }}</p>
+        <p>{{ currentDate | date : "medium" }}</p>
       </div>
     </header>
-    <p>New York: {{ currentTemperaturs.newYork }}</p>
-    <p>Berlin: {{ currentTemperaturs.berlin }}</p>
-    <p>Paris: {{ currentTemperaturs.paris }}</p>
-    <p>Chicago: {{ currentTemperaturs.chicago }}</p>
+    <p>
+      New York:
+      {{ currentTemperatures.newYork | temp : "fah" : "cel" }}
+    </p>
+    <p>Berlin: {{ currentTemperatures.berlin | temp : "fah" }}</p>
+    <p>Paris: {{ currentTemperatures.paris | temp : "cel" : "fah" }}</p>
+    <p>Chicago: {{ currentTemperatures.chicago | temp : "cel" }}</p>
   </article>
 
   <article class="temperatures">
     <header>
-      <img src="temp-icon.png" alt="Thermometer icon" />
+      <img
+        src="temp-icon.png"
+        alt="Thermometer icon"
+        (click)="onToggleDirection()"
+      />
       <div>
         <h2>Historic Temperatures</h2>
         <p>Berlin</p>
       </div>
     </header>
     <ul>
-      @for (temperature of historicTemperatures; track temperature) {
-      <li (click)="onReset($index)">{{ temperature }}</li>
+      <!-- // not working correctly because track is not unique -->
+      @for (temperature of historicTemperatures | sort:direction; track
+      temperature) {
+      <li (click)="onReset($index)">{{ temperature | temp : "cel" }}</li>
       }
     </ul>
   </article>
