💿 Provide data with DI

--- a/src/app/tasks/tasks-list/task-item/task-item.component.html
+++ b/src/app/tasks/tasks-list/task-item/task-item.component.html
@@ -12,13 +12,15 @@
   <p>{{ task().description }}</p>
   <form (ngSubmit)="onChangeTaskStatus(task().id, status.value)">
     <select #status>
-      <option value="open" [selected]="task().status === 'OPEN'">Open</option>
-      <option value="in-progress" [selected]="task().status === 'IN_PROGRESS'">
-        In-Progress
+      @for(taskStatusOption of taskStatusOptions; track taskStatusOption.value)
+      {
+      <option
+        [value]="taskStatusOption.value"
+        [selected]="task().status === taskStatusOption.status"
+      >
+        {{ taskStatusOption.text }}
       </option>
-      <option value="done" [selected]="task().status === 'DONE'">
-        Completed
-      </option>
+      }
     </select>
     <p>
       <button>Change Status</button>
