--- a/src/app/tasks/tasks-list/tasks-list.component.html
+++ b/src/app/tasks/tasks-list/tasks-list.component.html
@@ -3,9 +3,12 @@
   <p>
     <select (change)="onChangeTasksFilter(filter.value)" #filter>
       <option value="all">All</option>
-      <option value="open">Open</option>
-      <option value="in-progress">In-Progress</option>
-      <option value="done">Completed</option>
+      @for(taskStatusOption of taskStatusOptions; track taskStatusOption.value)
+      {
+      <option [value]="taskStatusOption.value">
+        {{ taskStatusOption.text }}
+      </option>
+      }
     </select>
   </p>
 </header>
