--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,9 @@
 <p>Working with "Streams of Data".</p>
 
 <p>
-  <button>Click</button>
+  <button (click)="increment()">Click</button>
 </p>
+<p>{{ counter() }}</p>
+<p>{{ interval$ | async }}</p>
+<p>{{ intervalSignal() }}</p>
+<p>{{ customInterval$ | async }}</p>
