--- a/src/styles.css
+++ b/src/styles.css
@@ -172,3 +172,14 @@ hr {
   background-color: transparent;
   color: #869999;
 }
+
+form.ng-submitted {
+  .control:has(.ng-invalid) label {
+    color: #f98b75;
+  }
+
+  input.ng-invalid {
+    background-color: #fbdcd6;
+    border-color: #f84e2c;
+  }
+}
