--- a/src/styles.css
+++ b/src/styles.css
@@ -158,7 +158,8 @@ hr {
 }
 
 .button:hover,
-.button:focus {
+.button:focus,
+.button.active {
   background-color: #319890;
 }
 
@@ -182,4 +183,11 @@ form.ng-submitted {
     background-color: #fbdcd6;
     border-color: #f84e2c;
   }
+}
+
+.forms-toggle {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 0.5rem;
 }
