📋 Add sign up form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,8 +20,8 @@
   </button>
   <button
     class="button"
-    (click)="selectForm('signup')"
-    [class.active]="formType() === 'signup'"
+    (click)="selectForm('signup-form')"
+    [class.active]="formType() === 'signup-form'"
   >
     SignUp Form
   </button>
